--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="ad-banner1">
         <ins class="kakao_ad_area" style="display:none;"
-            data-ad-unit = "DAN-ejIdaM4uSo9H1UIw"
+            data-ad-unit = "DAN-1mKlGYwVscYoQMEh"
             data-ad-width = "320"
             data-ad-height = "50">
         </ins>
